--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
 
 body {
 
-    background-color: #6f05fbef;
+    background-color: #8a51fc;
 
 }
 
@@ -19,7 +19,7 @@ body {
     width: 300px;
     display: block;
     margin: 20px auto;
-    border-radius: 50px 20px;
+    /* border-radius: 50px 20px; */
 
 }
 
@@ -29,7 +29,7 @@ main {
     border-radius: 20px;
     margin: 0 auto 40px;
     padding: 44px 24px 23px;
-    border-radius: 50px 20px;
+    border-radius: 50px 50px;
 }
 
 label {
