--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,11 +85,12 @@ section {
     margin: 15px 0;
 }
 
-.box {
+.currency-box {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 4px;
+    padding: 5px;
 }
 
 .moeda {
@@ -138,7 +139,7 @@ section {
         transform: rotate(-90deg);
     }
 
-    .box {
+    .currency-box {
         display: flex;
         flex-direction: column;
         align-items: center;
